--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ background: linear-gradient(90deg, rgba(140,27,171,1) 20%, rgba(247,97,161,1) 85
     background-color: var(--background-color);
     direction: rtl;
     line-height: 1.8;
+      //d
     min-height: 100vh;
     width: 100%;
     display: flex;
